[package]
name = "vanityeth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
libsecp256k1 = "0.7.1"
rand = "0.8.5"
rayon = "1.7.0"
hex = "0.4.3"
sha3 = "0.10.6"
num_cpus = "1.15.0"
